--- a/NiceView/src/main/res/layout/nice_day_picker_layout.xml
+++ b/NiceView/src/main/res/layout/nice_day_picker_layout.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
-    <me.nice.view.widget.NiceWheelPicker
+    <me.nice.view.widget.wheel.NiceWheelPicker
         android:id="@+id/niceWheelDayPicker"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
