--- a/NiceView/src/main/res/layout/nice_year_picker_layout.xml
+++ b/NiceView/src/main/res/layout/nice_year_picker_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <me.nice.view.widget.NiceWheelPicker
+    <me.nice.view.widget.wheel.NiceWheelPicker
         android:id="@+id/niceWheelYearPicker"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
