--- a/app/src/main/res/layout/activity_nice_pointer.xml
+++ b/app/src/main/res/layout/activity_nice_pointer.xml
@@ -4,12 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/mainRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    tools:context=".NicePointerActivity">
 
 </android.support.constraint.ConstraintLayout>
