--- a/app/src/main/res/layout/activity_nice_pointer.xml
+++ b/app/src/main/res/layout/activity_nice_pointer.xml
@@ -1,9 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NicePointerActivity">
+
+<!--    <me.nice.view.widget.NiceDotLoadingView-->
+<!--        android:id="@+id/niceDotLoadingView"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/g_default_base_transparent"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_marginBottom="125dp"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:padding="20dp"-->
+<!--        app:dotRadius="8dp"-->
+<!--        app:dotColor="@color/md_teal_300"-->
+<!--        app:dotCount="4"-->
+<!--        app:dotSpace="4dp" />-->
+
+    <me.nice.view.widget.NiceBubbleLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:backgroundColor="@color/md_teal_300"
+        android:padding="10dp"
+        app:radius="28dp"
+        app:shadowColor="@color/md_teal_200"
+        app:bubbleHOffset="0dp"
+        app:bubbleVOffset="-125dp">
+
+        <me.nice.view.widget.NiceDotLoadingView
+            android:id="@+id/niceDotLoadingView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/g_default_base_transparent"
+            android:layout_gravity="center"
+            android:layout_marginBottom="125dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="20dp"
+            app:dotRadius="8dp"
+            app:dotColor="@color/md_white"
+            app:dotCount="4"
+            app:dotSpace="4dp" />
+
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_marginBottom="125dp"-->
+<!--            android:textSize="30sp"-->
+<!--            android:text="@string/app_name"/>-->
+
+
+    </me.nice.view.widget.NiceBubbleLayout>
+
+
+    <me.nice.view.widget.NicePointerView
+        android:id="@+id/nicePointerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:outRadius="30dp"
+        app:lineHeight="60dp"
+        app:lineColor="@color/md_red_800"
+        app:insideColor="@color/md_white"
+        app:outColor="@color/md_teal_300"
+        app:jumpStyle="@integer/DIDI"
+        app:zoomStyle="@integer/DIDI"
+        app:waterWave="true"
+        app:waterWaveMinRadius="10dp"
+        app:waterWaveMaxRadius="120dp" />
+
+    <Button
+        android:id="@+id/jumpAnimator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="200dp"
+        android:text="跳动"/>
+
+    <Button
+        android:id="@+id/spreadAnimator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/jumpAnimator"
+        android:text="扩散"/>
+
+
+    <Button
+        android:id="@+id/niceDotLoadingViewButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spreadAnimator"
+        android:text="开始loadin"/>
+
 
 </android.support.constraint.ConstraintLayout>
