--- a/app/src/main/res/layout/activity_nice_pointer.xml
+++ b/app/src/main/res/layout/activity_nice_pointer.xml
@@ -33,8 +33,9 @@
         android:padding="10dp"
         app:radius="28dp"
         app:shadowColor="@color/md_teal_200"
-        app:bubbleHOffset="0dp"
-        app:bubbleVOffset="-125dp">
+        app:bubbleVOffsetBottom="125dp"
+        app:bubbleHOffsetStart="100dp"
+        app:bubbleHOffsetEnd="100dp">
 
         <me.nice.view.widget.NiceDotLoadingView
             android:id="@+id/niceDotLoadingView"
