添加圆形涟漪控件
添加圆形涟漪控件

--- a/NiceView/src/main/res/values/attrs.xml
+++ b/NiceView/src/main/res/values/attrs.xml
@@ -101,5 +101,11 @@
         <attr name="bubbleVOffsetBottom" format="dimension"/>
     </declare-styleable>
 
+    <declare-styleable name="NiceCircleRippleView">
+        <attr name="circleRadius" format="dimension"/>
+        <attr name="circleColor" format="color"/>
+        <attr name="circleRippleRadius" format="dimension"/>
+        <attr name="circleRippleDuring" format="integer"/>
+    </declare-styleable>
 
 </resources>
