圆形涟漪控件新增代码设置属性
圆形涟漪控件新增代码设置属性

--- a/app/src/main/res/layout/activity_nice_circle_ripple_view.xml
+++ b/app/src/main/res/layout/activity_nice_circle_ripple_view.xml
@@ -7,13 +7,13 @@
     android:orientation="vertical"
     tools:context=".NiceCircleRippleViewActivity">
 
-    <me.nice.view.widget.NiceCircleRippleView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:circleRadius="40dp"
-        app:circleColor="@color/md_red_500"
-        app:circleRippleRadius="200dp"
-        app:circleRippleDuring="500" />
+<!--    <me.nice.view.widget.NiceCircleRippleView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        app:circleRadius="40dp"-->
+<!--        app:circleColor="@color/md_red_500"-->
+<!--        app:circleRippleRadius="200dp"-->
+<!--        app:circleRippleDuring="500" />-->
 
 </LinearLayout>
