合并相机代码
合并相机代码

--- a/view/src/main/res/values/attrs.xml
+++ b/view/src/main/res/values/attrs.xml
@@ -68,7 +68,7 @@
 
     <declare-styleable name="NiceDotView">
         <attr name="dotColor"/>
-        <attr name="dotPadding"/>
+<!--        <attr name="dotPadding"/>-->
     </declare-styleable>
 
     <declare-styleable name="NicePopLayout">
