--- a/view/src/main/res/values/attrs.xml
+++ b/view/src/main/res/values/attrs.xml
@@ -41,6 +41,8 @@
         <attr name="zoomStyle" format="integer"/>
     </declare-styleable>
 
+    <integer name="defaultItemCount">20</integer>
+
     <integer name="DIDI">101</integer>
     <integer name="COMMON">102</integer>
     <integer name="MO_BAI">102</integer>
