--- a/app/src/main/res/layout/activity_nice_camera.xml
+++ b/app/src/main/res/layout/activity_nice_camera.xml
@@ -5,7 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:gravity="center"
     tools:context=".NiceCameraActivity">
+
+    <me.nice.camera.view.Camera2PreviewView
+        android:id="@+id/ncCamera2PreviewView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <net.qiujuer.genius.ui.widget.Button
+        android:id="@+id/ncButton"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:padding="20dp"
+        android:text="@string/recording"
+        android:textAlignment="center"/>
 
 </RelativeLayout>
