--- a/view/src/main/res/values/attrs.xml
+++ b/view/src/main/res/values/attrs.xml
@@ -59,6 +59,13 @@
 
     <attr name="dotColor" format="color"/>
     <attr name="dotAnimationColor" format="color"/>
+    <attr name="circleRadius" format="dimension"/>
+    <attr name="circleColor" format="color"/>
+    <attr name="nBorderColor" format="color"/>
+    <attr name="nBorderSize" format="dimension"/>
+    <attr name="nRadius" format="dimension"/>
+    <attr name="nButtonColor" format="color"/>
+
 
     <declare-styleable name="NiceDotLoadingView">
         <attr name="dotRadius" format="dimension"/>
@@ -104,8 +111,6 @@
         <attr name="bubbleVOffsetBottom" format="dimension"/>
     </declare-styleable>
 
-    <attr name="circleRadius" format="dimension"/>
-    <attr name="circleColor" format="color"/>
 
     <declare-styleable name="NiceCircleRippleView">
         <attr name="circleRadius"/>
@@ -119,19 +124,17 @@
         <attr name="circleColor"/>
     </declare-styleable>
 
-
     <declare-styleable name="NiceTextView">
         <attr name="niceStrokeSize" format="dimension"/>
         <attr name="niceStrokeColor" format="color"/>
     </declare-styleable>
 
-    <attr name="nBorderColor" format="color"/>
-    <attr name="nBorderSize" format="dimension"/>
+
 
     <declare-styleable name="NiceRadioButton">
         <attr name="nBorderSize"/>
         <attr name="nBorderColor"/>
-        <attr name="nButtonColor" format="color"/>
+        <attr name="nButtonColor"/>
         <attr name="nText" format="string"/>
         <attr name="nTextColor" format="color"/>
         <attr name="nTextSize" format="dimension"/>
@@ -140,8 +143,22 @@
 
     <declare-styleable name="NiceAvatar">
         <attr name="nCount" format="integer"/>
-        <attr name="nRadius" format="dimension"/>
+        <attr name="nRadius"/>
         <attr name="nBorderSize"/>
         <attr name="nBorderColor"/>
     </declare-styleable>
+
+    <declare-styleable name="NiceCameraButton">
+        <attr name="nRadius"/>
+        <attr name="nBorderSize"/>
+        <attr name="nBorderColor"/>
+        <attr name="nButtonColor"/>
+        <attr name="nButtonStyle" format="enum">
+            <enum name="camera" value="1"/>
+            <enum name="video" value="2"/>
+        </attr>
+    </declare-styleable>
+
+
+
 </resources>
